AmicarDP/src/objects/et4ae5__ET4AE_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>et4ae5__Configuration_Wizard_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Configuration Wizard Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Enable_Cascading_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Elimina automáticamente registros de datos de seguimiento principales y secundarios cuando utilice la herramienta de Limpieza de datos de seguimiento. Para evitar límites regulados de Apex en trabajos de eliminación por lotes, desactive la eliminación en cascada.</inlineHelpText>
        <label>Enable Cascade-Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>et4ae5__Environment__c</fullName>
        <label>Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__JBPlatformEventEnable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>JB Platform Event Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__QA_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QA Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Remote_Site_Setting_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remote Site Setting Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__SessionId__c</fullName>
        <label>SessionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__StackId__c</fullName>
        <label>Stack Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__TenantId__c</fullName>
        <label>Tenant Id (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Tracking_Data_Clean_Up_Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <inlineHelpText>Introduzca el número de registros para eliminar por lote. Elimine hasta 2000 registros por lote.</inlineHelpText>
        <label>Tracking Data Cleanup Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ET4AE Configuration</label>
</CustomObject>